Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/8138840/T8139249.out
T8139249.java:11:20: compiler.err.operator.cant.be.applied: ~, float
1 error
